--- a/site/style/style.css
+++ b/site/style/style.css
@@ -1,17 +1,80 @@
 
-
 .navbar-wrapper {
+  margin-top: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  padding-left: 25px;
+  padding-right: 25px;
 
-	margin-top: 20px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 20;
 }
 
-.navbar-wrapper .container {
-	padding-left: 15px;
-	padding-right: 15px;
+.navbar {
+  border-radius: 15px;
 }
+
+.carousel .item {
+  height: 500px;
+  background-color: #777;
+}
+
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+}
+
+.navbar-form {
+  padding-right: 25px;
+}
+
+
+.sub-header {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+
+/* Hide for mobile, show later */
+.sidebar {
+  display: none;
+}
+
+.sidebar {
+  position: fixed;
+  top:  500px;
+  left: 0;
+  bottom: 0;
+  z-index:  0;
+  display: block;
+  padding: 70px 20px 20px;
+  background-color: #f5f5f5;
+  border-right: 10px solid #eee;
+  }
+
+
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-left: -20px;
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+}
+.nav-sidebar > li > a {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.nav-sidebar > .active > a {
+  color: #fff;
+  background-color: #428bca;
+}
+
+
+
+
+
+
 
